[package]
name = "deduplicate"
version = "0.3.6"
description = "caching, asynchronous, request deduplication"
authors = [
  "garypen <garypen@gmail.com>",
]
license = "Apache-2.0"
repository = "https://github.com/garypen/deduplicate"
homepage = "https://github.com/garypen/deduplicate"
documentation = "https://github.com/garypen/deduplicate#readme"
readme = "README.md"
keywords = ["deduplicate", "coalesce", "delegate", "caching", "request"]
categories = ["asynchronous", "caching", "concurrency"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
lru = "0.12.0"
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1.37"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
futures = "0.3.28"
moka = { version = "0.12.1", features = [ "future"] }
rand = "0.8.5"
tokio-test = "0.4.3"

[[bench]]
name = "deduplicate"
harness = false
